# aurum

./: CMakeLists.txt  Makefile  README.md  array.h  ast.c  ast.h  comp.sh  input.aur  main.c  map.h  memory.c  memory.h  null-guards.h  queue.h  tokenizer.c  tokenizer.h  types.c  types.h  vm.c  vm.h
